--- a/slurm/analysis_top1000/analysis.Rmd
+++ b/slurm/analysis_top1000/analysis.Rmd
@@ -556,8 +556,8 @@ fraction_shrinking_min_old
 
 I ran:
 
-$ python3 all_oldness.py /scratch/a.guha/minnpm-exp/vanilla > oldness_vanilla.csv
-$ python3 all_oldness.py /scratch/a.guha/minnpm-exp/rosette/npm/min_oldness,min_num│
+$ python3 all_oldness.py /scratch/minnpm-exp/vanilla > oldness_vanilla.csv
+$ python3 all_oldness.py /scratch/minnpm-exp/rosette/npm/min_oldness,min_num│
 _deps > oldness_npm_oldness_deps.csv
 
 Raw data
